<resources>
    <string name="app_name">KarigorBangla</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="item">Select Category</string>
    <string name="item1">Location</string>
    <string name="item2">Number of Workers</string>


    <!--SignUp-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign_in">SignUp ?</string>
    <!--SignIn-->
    <string name="SIngUp_textView">SingUp</string>
    <string name="UserName">User Name</string>
    <string name="confirmPassword">confirm password</string>
    <string name="terms">I agree all terms and conditions</string>

    <!--Category Fragment-->
    <string name="category">Home Appliances</string>
    <string name="apartment">AC Service</string>
    <string name="flat">Fridge Service</string>
    <string name="store">Geyser Service</string>
    <string name="office">Oven Service</string>
    <string name="garage">TV Servicing</string>
    <string name="warehouse">Washing Machine</string>

    <!--TakerProfileFragment Fragment-->
    <string name="user_name">Name : User Name</string>
    <string name="user_email">Email : email@email.com</string>
    <string name="user_address">Address : Bangladesh</string>
    <string name="edite_profle">Edit Profile</string>

    <!--Number Authentication Activity-->
    <string name="emter_number">Enter your mobile number</string>
    <string name="number_fild">number</string>
    <string name="number_fild_text">You must be enter your 11 digit phone number.Then tap next to verify your account with your phone number . You don’t need to manualy enter verification code if the number install in this phone. </string>

    <string-array name="renters_type">

        <item>Appliances Cleaning</item>
        <item>Furniture Cleaning</item>
        <item>Water Tank Cleaning</item>
        <item>Carpentry Service</item>
        <item>Computer Service</item>
        <item>Electrical Service</item>
        <item>Plumbing Service</item>
        <item>AC Service</item>
        <item>Fridge Service</item>
        <item>Geyser Service</item>
        <item>Oven Service</item>
        <item>TV Servicing</item>
        <item>Washing Machine Service</item>
        <item>Shifting</item>
        <item>Painting</item>
    </string-array>

    <string-array name="category_type">
        <item>Apartment</item>
        <item>Duplex</item>
        <item>Penthouse</item>
        <item>Store</item>
        <item>Office</item>
        <item>Garage</item>
        <item>Warehouse</item>
    </string-array>

    <string-array name="number">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>15</item>
        <item>18</item>
    </string-array>

    <string-array name="bool">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="time">
        <item>pm</item>
        <item>am</item>
    </string-array>


    <!--Location Tracking Activity-->
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">test@test.com</string>
    <string name="test_password">testpassword</string>
    <string name="firebase_path">location</string>

    <!--Location Tracking API-KEY-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBcPzksYXPPfaKycl0O1EX2J4iH4nVHvaY</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_provider_location">Map</string>
    <string name="title_activity_taker_location">Map</string>
    <string name="title_activity_provider_own_location">Map</string>


    <string name="Karigor">RequestSubmit Application</string>

    <string name="ok">ok</string>
    <string name="yes">Accept</string>
    <string name="No">Decline</string>
</resources>
