<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".Activity.SingUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/UserName"
                android:inputType="text"
                android:textSize="18sp"
                android:drawablePadding="8dp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorWhite"
                android:paddingBottom="10dp"
                android:background="@drawable/borderstroke"
                android:drawableLeft="@drawable/user"/>

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:drawablePadding="8dp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="18dp"
                android:textColorHint="@color/colorWhite"
                android:paddingBottom="10dp"
                android:background="@drawable/borderstroke"
                android:drawableLeft="@drawable/email" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:drawablePadding="8dp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="18dp"
                android:textColorHint="@color/colorWhite"
                android:paddingBottom="10dp"
                android:background="@drawable/borderstroke"
                android:drawableLeft="@drawable/lock"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:drawablePadding="8dp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="18dp"
                android:textColorHint="@color/colorWhite"
                android:paddingBottom="10dp"
                android:background="@drawable/borderstroke"
                android:drawableLeft="@drawable/lock" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="22sp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/terms"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="login"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:background="@drawable/login_bt_bg"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/emaiAndPassword"
            android:layout_marginTop="10dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>


    </LinearLayout>

</RelativeLayout>